ecmascript/parser/tests/typescript-errors/tsc/types/objectTypeLiteral/callSignatures/restParameterWithoutAnnotationIsAnyArray/input.ts.stderr
error: Rest element must be final element
 --> $DIR/tests/typescript-errors/tsc/types/objectTypeLiteral/callSignatures/restParameterWithoutAnnotationIsAnyArray/input.ts:5:11
  |
5 | var f2 = (...x, ...y) => { }
  |           ^^^^

